--- a/src/jade/includes/header.jade
+++ b/src/jade/includes/header.jade
@@ -73,16 +73,8 @@ header.main-header
           .content.against-right
             p Sign in to see your Wish List
             a.button.black Sign in
-        .li.tab.shopping-bag
-          .title.img
-            a(href="./shoppingbag-detail.html")
-              i.icon.icon-shoppingbag-white-base64
+        #react-shoppingbag.li.tab.shopping-bag
 
-          block shoppingBagDropDown
-            .content.against-right.empty 
-              p.strong Your bag is empty
-              p We currently offer the ability to Shop & Collect purchases in our Wine & Spirits.
-              a.button.action Shop Wines & Spirits
         block sign-out
         .li.tab.desktop-searchbox.kiwi-hidden-m.kiwi-hidden-s
           span.placeholderWrap &nbsp Search
