--- a/src/stylus/modules/header/register-menu.styl
+++ b/src/stylus/modules/header/register-menu.styl
@@ -36,9 +36,13 @@
           &:hover
             color #999
 
-      &.shopping-bag
+      &.shopping-bag          
         >.title.img
           padding 6.5px 10px
+          color  #fff
+          &:hover 
+            color  #000
+            
           @media mq-m
             padding 2px 9px
             z-index 2
