--- a/src/stylus/base/button.styl
+++ b/src/stylus/base/button.styl
@@ -75,14 +75,12 @@ $button
     border 1px solid color-silver
     color color-secondary
     line-height 1.6em
-    cursor default
+    pointer-events  none
     &.action
       background color-action
       border none
       color #fff
       opacity .4
-    &:hover
-      color rgba(0,0,0, .5)
 
   &.expand
     width 100%
