--- a/src/stylus/base/button.styl
+++ b/src/stylus/base/button.styl
@@ -91,6 +91,12 @@ $button
     padding 5px
     width auto
     
+  &.close 
+    color  #777
+    font-size  32px
+    &:after 
+      content  "×"
+    
 
 .share-btn
   a
