--- a/src/jade/templates/master.jade
+++ b/src/jade/templates/master.jade
@@ -28,6 +28,9 @@ html.no-ie(lang="en") <!--<![endif]-->
     <!--[if (gte IE 6)&(lte IE 8)]>
     script(src= "scripts/vendor/selectivizr/selectivizr-min.js")
     <![endif]-->
+
+    block globalSettings
+      include ../includes/global-settings
       
   body
     block body
