--- a/src/jade/includes/global-settings.jade
+++ b/src/jade/includes/global-settings.jade
@@ -1,6 +1,6 @@
 script.
   var productCategoryList = {
     wine: ["red", "white", "dessert", "rose", "Champagne/Sparkling"],
-    spirit: ["cognac", "whiksy", "vodka", "rum", "gin", "baijiu", "Tequila"],
+    spirit: ["cognac", "whisky", "vodka", "rum", "gin", "baijiu", "Tequila"],
     beer: []
   }
