--- a/src/stylus/pages/shop.styl
+++ b/src/stylus/pages/shop.styl
@@ -12,3 +12,13 @@
 
 .productsList
   margin-top 10px
+  
+.product-enter
+  opacity  0
+  
+  &.product-enter-active
+    opacity   1
+    transition  opacity 300ms ease-in
+
+    
+    
