--- a/styles/main.css
+++ b/styles/main.css
@@ -8648,3 +8648,56 @@ input.placeholder {
   -webkit-transition: opacity 300ms ease-in;
   transition: opacity 300ms ease-in;
 }
+.product-leave {
+  opacity: 1;
+  -ms-filter: none;
+  -webkit-filter: none;
+          filter: none;
+}
+.product-leave.product-leave-active {
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
+}
+.shoppingbagProduct-enter {
+  height: 0;
+  -webkit-transition: height 10ms ease-out;
+  transition: height 10ms ease-out;
+}
+.shoppingbagProduct-enter.shoppingbagProduct-enter-active {
+  height: auto;
+}
+.shoppingbagProduct-leave {
+  height: 165px;
+  -webkit-transition: height 300ms ease-out;
+  transition: height 300ms ease-out;
+}
+.shoppingbagProduct-leave.shoppingbagProduct-leave-active {
+  height: 0;
+}
+.shoppingbagDetails-enter {
+  opacity: 0.01;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=1)";
+  filter: alpha(opacity=1);
+  -webkit-transition: opacity 300ms ease;
+  transition: opacity 300ms ease;
+}
+.shoppingbagDetails-enter.shoppingbagDetails-enter-active {
+  opacity: 1;
+  -ms-filter: none;
+  -webkit-filter: none;
+          filter: none;
+}
+.shoppingbagDetails-leave {
+  opacity: 1;
+  -ms-filter: none;
+  -webkit-filter: none;
+          filter: none;
+  -webkit-transition: opacity 500ms ease;
+  transition: opacity 500ms ease;
+}
+.shoppingbagDetails-leave.shoppingbagDetails-leave-active {
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
+}
