remove useless legacy code

--- a/src/jade/includes/header.jade
+++ b/src/jade/includes/header.jade
@@ -15,7 +15,7 @@ header.main-header
             .img
               img(src="http://placehold.it/150x100", style="width:150px;height:100px")
             .text
-              strong.uppercase YOU ARE VISITING OUR T Galleria Hong Kong Store.
+              strong.uppercase YOU ARE VISITING OUR Hong Kong Store.
               p Visiting another location? Please click on the flag.
 
       .kiwi-visible-s.kiwi-visible-m
@@ -27,7 +27,7 @@ header.main-header
               i.icon.margin-left-5
               .store
                 .uppercase You are visiting our 
-                  strong Airport Singapore Store
+                  strong Hong Kong Store
                 | Visiting another location
     <!-- END select location -->    
 
@@ -50,17 +50,6 @@ header.main-header
           .li.tab.sign-in.kiwi-hidden-m.kiwi-hidden-s
             .title.text 
               a(href="/register-sign-in.html") Sign in
-            .content.against-left 
-              a.button.black(href="/register-sign-in.html") LOG IN
-              .line-with
-                .text OR LOG IN WITH
-              .share-btn
-                a(href="#")
-                  +icon("twitter")
-                a(href="#")
-                  +icon("facebook")
-                a(href="#")
-                  +icon("weibo")
         
           .li.register.kiwi-hidden-m.kiwi-hidden-s
             .title.text 
@@ -70,9 +59,6 @@ header.main-header
             a(href="./my-wishlist.html")
               i.icon.icon-heart-base64
 
-          .content.against-right
-            p Sign in to see your Wish List
-            a.button.black Sign in
         #react-shoppingbag.li.tab.shopping-bag
 
         block sign-out
