--- a/src/jade/modules/promotions.jade
+++ b/src/jade/modules/promotions.jade
@@ -2,7 +2,7 @@
 .promotions.black
   .kiwi-grid
     .kiwi-col.l-1-3.m-1-2.s-1
-      +promotion({img : 'promotion-1', title : 'DFS EXCLUSIVES', detail : 'DISCOVER THE COLLECTION'})
+      +promotion({img : 'promotion-1', title : 'BRAND EXCLUSIVES', detail : 'DISCOVER THE COLLECTION'})
     .kiwi-col.l-1-3.m-1-2.s-1
       +promotion({img : 'promotion-1', title : 'OUR STORES', detail : 'FIND YOURS'})
     .kiwi-col.l-1-3.m-1.s-1
