--- a/src/stylus/modules/products-list.styl
+++ b/src/stylus/modules/products-list.styl
@@ -31,6 +31,15 @@
       margin 0 auto
       @media mq-min-l
         width 200px
+  
+  .no-product
+    display none
+    text-align center
+    font-size 20px
+    height  80px
+    line-height 80px
+    &.show 
+      display block 
 
   @media mq-min-l 
     &.list
