--- a/src/jade/templates/master.jade
+++ b/src/jade/templates/master.jade
@@ -33,6 +33,7 @@ html.no-ie(lang="en") <!--<![endif]-->
       include ../includes/global-settings
       
   body
+    include ../../svg/symbol-defs.svg
     block body
       .global-wrap
         block header
