--- a/src/stylus/modules/header.styl
+++ b/src/stylus/modules/header.styl
@@ -11,6 +11,9 @@
   @require 'header/register-menu'
   @require 'header/mobile-menu'
 
+  .icon-svg
+    color #fff
+
   // spacing the content (because of the position fixed of the header)
   & + div
     //margin-top 37px
