--- a/src/stylus/modules/header/mobile-menu.styl
+++ b/src/stylus/modules/header/mobile-menu.styl
@@ -1,11 +1,10 @@
 .mobile-menu
   display none
   float left
-  padding 8px 0
 
-  img.icon
-    width 23px
-    height 13px
+  .icon-menu
+    width 30px
+    height 30px
 
   @media mq-m
     display block
