--- a/src/stylus/modules/mobile-menu.styl
+++ b/src/stylus/modules/mobile-menu.styl
@@ -55,3 +55,12 @@
 .menu-left-opened 
   #mobile-menu
     opacity 1
+    
+#mobile-menu
+  .icon-svg
+    width 18px
+    height 18px
+    margin-right 10px
+    vertical-align middle
+  .icon-glass
+    color #c1310f 
