--- a/src/stylus/base/icons.styl
+++ b/src/stylus/base/icons.styl
@@ -39,3 +39,10 @@
   display inline-block
   vertical-align baseline
 
+.icon-svg
+  display inline-block
+  width 1em
+  height 1em
+  fill currentColor
+  color #444
+  
