--- a/src/stylus/modules/header/sticky-menu.styl
+++ b/src/stylus/modules/header/sticky-menu.styl
@@ -4,7 +4,9 @@
   width 47%
   position relative
 
-  img
+  .icon-menu
+    width 30px
+    height 30px
     margin-left 15px
 
   
@@ -15,7 +17,7 @@
   .sticky-header
     .sticky-menu
       display block
-      margin-top 18.5px
+      padding-top 12px
   
       @media mq-m
         display none
@@ -24,9 +26,9 @@
       transition opacity 0.5s ease 0s
       border 6px solid transparent
       border-bottom-color #fff
-      left 20px
+      left 24px
       position absolute
-      top 23px
+      top 42px
       width 0
       z-index 3
       display block
